pro/src/components/FormLayout/FormLayout.module.scss
@use "styles/mixins/_rem.scss" as rem;
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_size.scss" as size;

$info-box-width: clamp(rem.torem(240px), 29vw, rem.torem(316px));
$info-box-margin-left: rem.torem(24px);

.form-layout {
  background-color: var(--color-white);

  &.full-width-actions {
    @media (min-width: size.$tablet) {
      & > *:not(.form-layout-actions) {
        width: rem.torem(486px);
      }
    }

    .form-layout-actions {
      justify-content: space-between;
    }
  }

  &.medium-width-actions {
    @media (min-width: size.$tablet) {
      & > *:not(.form-layout-actions) {
        max-width: rem.torem(826px);
      }
    }

    .form-layout-actions {
      justify-content: space-between;
    }
  }

  &-section {
    margin-bottom: rem.torem(24px);

    &-title {
      @include fonts.title2;
    }

    &-header {
      margin-bottom: rem.torem(16px);
    }

    &-description {
      &-container {
        margin-top: rem.torem(45px);
        margin-bottom: rem.torem(32px);
      }

      &-content {
        white-space: pre-line;
        margin-top: rem.torem(8px);
      }
    }
  }

  &-sub-section {
    margin-bottom: rem.torem(32px);

    &-title {
      margin-bottom: rem.torem(24px);

      @include fonts.title4;
    }
  }

  &-row {
    max-width: 100%;

    &.small-space-after {
      margin-bottom: rem.torem(4px);
    }

    &.medium-space-after {
      margin-bottom: rem.torem(16px);
    }

    &.inline-group {
      display: flex;
      flex-flow: row wrap;
      flex-direction: row;
      gap: rem.torem(16px);
    }
  }

  &-actions {
    display: flex;
  }

  &-action {
    margin-left: rem.torem(24px);
    text-align: center;

    @media (min-width: size.$tablet) {
      min-width: rem.torem(192px);
    }

    &:first-child {
      margin-left: 0;
    }
  }

  &-row-info {
    position: relative;
    margin-bottom: rem.torem(16px);

    &-field {
      width: 100%;
    }

    &-info {
      width: 100%;
    }
  }
}

.mandatory-info {
  @include fonts.body-xs;

  margin-bottom: rem.torem(32px);
  color: var(--color-grey-dark);
}

@media (min-width: size.$laptop) {
  .form-layout {
    &-row-info-info {
      width: $info-box-width;
      position: absolute;
      top: 0;
      right: calc(
        -#{$info-box-margin-left} - $info-box-width
      ); // calc(-margin-left - width)

      &-inner {
        position: absolute;
        background: var(--color-white);
      }
    }
  }
}

